# ABBY-Framework

./: .gitignore  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  setup.cfg
Abby_documentation/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  quick-start.html  search.html  searchindex.js  what-is-abby.html
Abby_documentation/_images/: graphviz-96136320a65ece384f20839078d953cf48cd7f4f.png.map
Abby_documentation/_modules/: index.html
Abby_documentation/_modules/abby/: evaluation.html  firmware.html  logger.html  model.html  oscilloscope.html  plot.html  processing.html
Abby_documentation/_sources/: quick-start.rst.txt  what-is-abby.rst.txt
Abby_documentation/_sources/guide/: simulation.rst.txt
Abby_documentation/_sources/modules/: evaluation.rst.txt  processing.rst.txt
Abby_documentation/guide/: acquisition.html  dataset-building.html  evaluation.html  faq.html  install.html  simulation.html  training.html
Abby_documentation/modules/: emulator.html  evaluation.html  firmware.html  model.html  processing.html
Abby_documentation/modules/extra/: index.html  logger.html  oscilloscope.html  plot.html
Sensitivity_Analysis/: Gradients.npz  TrainHistoryDict.npz  instructions.txt
abby/: __init__.py  evaluation.py  logger.py  oscilloscope.py  plot.py  processing.py
abby/emulator/: __init__.py  base.py  jtrace.py  qemu.py  thumbulator.py
abby/firmware/: __init__.py  blockcipher.py  generate.py  platformio.ini  stm32f0.ld
abby/firmware/include/: main.h  peripherals.h
abby/firmware/src/: main.c  peripherals.cpp
abby/firmware/test/: README
abby/model/: ABBY-CM0_Model_ACMCCS.h5  ABBY-CM3_Model_ACMCCS.h5  __init__.py  base.py  catboost.py  elmo.py  hamming_weight.py  mlp.py  xgboost.py
docs/: conf.py  index.rst
docs/guide/: acquisition.rst  dataset-building.rst  evaluation.rst  faq.rst  install.rst  training.rst
docs/modules/: emulator.rst  firmware.rst  model.rst
docs/modules/extra/: logger.rst  oscilloscope.rst
docs/scripts/: build_dataset.py  build_model.sh  evaluate_tvla.sh  generate_input.py  plot_instructions.py  plot_tvla.py  trace_acquisition.py  trace_simulation.py  train.py
tests/: __init__.py  test_emulator.py  test_evaluation.py  test_firmware.py  test_logger.py  test_model.py  test_processing.py
(+54 files in other folders)
