[metadata]
name = abby
long_description = file: README.md
long_description_content_type = text/markdown
description = Framework for building side channel model

;url = https://github.com/TODO/TODO
keywords = sca, side channel, machine learning, model
license = Apache License 2.0
license_file = LICENSE.txt
classifiers =
	Development Status :: 4 - Beta
	Environment :: Console
	Intended Audience :: Developers
	Intended Audience :: Information Technology
	Intended Audience :: Science/Research
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Security

[options]
packages = find:
include_package_data = True
install_requires =
	platformio ~= 5.0
	picoscope >= 0.7
	xgboost >= 1.3
	tqdm >= 4.28
	dtw-python >= 1.1.0
	matplotlib
	pandas >= 0.23

[bdist_wheel]
; pure python
universal = 1
